@@ -1,0 +1,35 @@
+<?php
+// Pandora FMS
+// ====================================
+// Copyright (c) 2004-2008 Sancho Lerena, slerena@gmail.com
+// Copyright (c) 2005-2008 Artica Soluciones Tecnologicas S.L, info@artica.es
+
+// This program is free software; you can redistribute it and/or
+// modify it under the terms of the GNU General Public License
+// as published by the Free Software Foundation; either version 2
+// of the License, or (at your option) any later version.
+// This program is distributed in the hope that it will be useful,
+// but WITHOUT ANY WARRANTY; without even the implied warranty of
+// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+// GNU General Public License for more details.
+// You should have received a copy of the GNU General Public License
+// along with this program; if not, write to the Free Software
+// Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
+
+// Load global vars
+global $config;
+
+if (comprueba_login() != 0) {
+        require ("general/noaccess.php");
+        exit;
+}
+
+if (!isset($id_agente)){
+    require ("general/noaccess.php");
+    exit;
+}
+
+echo "<h3>".lang_string ("Latest events for this agent")."</h3>";
+smal_event_table ("WHERE id_agente = $id_agente", $limit = 10, $width=750);
+
+?>
